--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,9 +16,52 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="Hello World!"
-            android:textSize="30sp"/>
+            android:layout_height="100dp"
+            android:background="@android:color/holo_red_light"
+            android:text="HEADER"/>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    android:background="@android:color/darker_gray"
+                    android:gravity="center"
+                    android:text="Hello World!"
+                    android:textSize="30sp"/>
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    android:background="@android:color/background_dark"
+                    android:gravity="center"
+                    android:text="Hello World!"
+                    android:textSize="30sp"/>
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    android:background="@android:color/holo_green_light"
+                    android:gravity="center"
+                    android:text="Hello World!"
+                    android:textSize="30sp"/>
+
+            </LinearLayout>
+        </ScrollView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@android:color/holo_red_light"
+            android:text="FOOTER"/>
     </com.alexjing.pullpushtorefresh.lib.PullPushLayout>
 </RelativeLayout>
